# archi

./: .gitmodules  Cargo.toml
archi/: Cargo.toml  deny.toml
archi/src/: camera.rs  context.rs  debug.rs  fft.rs  glerror.rs  grid.rs  input.rs  main.rs  noise.rs  ocean.rs  shader.rs  skybox.rs  terrain.rs
archi/src/ocean/: displacement.rs  gradient_jacobian.rs
archi/src/shader/: preprocessor.rs
archi/src/shaders/: bake_water_maps.frag  butterfly.frag  framebuffer-debug.frag  framebuffer-debug.vert  h0k.frag  hkt.frag  inversion.frag  ocean.frag  ocean.geom  ocean.tesc  ocean.tese  ocean.vert  skybox.frag  wireframe.frag
archi/src/shaders/include/: atmosphere.glsl  complex.glsl  equirectangular.glsl  tonemap.glsl
shaders/: skybox.frag  skybox.vert  terrain.frag
src/: camera.rs  context.rs  debug.rs  fft.rs  glerror.rs  grid.rs  main.rs  material.rs  mesh.rs  model.rs  normal.rs  ocean.rs  renderer.rs  shader.rs  skybox.rs  terrain.rs  world.rs
src/shaders/: ambient.light.frag  ambient.light.vert  basicShader.frag  basicShader.vert  bufVis.frag  bufVis.vert  directional.light.frag  framebuffer-debug.vert  inversion.frag  ocean-normal.frag  ocean.frag  ocean.geom  ocean.tesc  ocean.tese  ocean.vert  point.light.frag  point.light.vert  post.frag  skybox.frag
