[package]
name = "archi"
version = "0.1.0"
authors = ["Joel Nordström <e.joel.nordstrom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "*"
image = "*"
luminance = "0.38"
luminance-derive = "*"
nalgebra-glm = "*"
rand = "*"
sdl2 = "*"
tiny_ecs = "*"

[profile.dev]
opt-level = 3
