[package]
name = "archi"
version = "0.1.0"
authors = ["Joel Nordström <e.joel.nordstrom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "*"
image = "*"
luminance = "0.40"
luminance-gl = "0.14"
luminance-derive = "0.6"
luminance-sdl2 = "0.1"
nalgebra-glm = "*"
rand = "*"
sdl2 = "*"
hdrldr = "*"

[patch.crates-io]
luminance = { path = "../forks/luminance-rs/luminance" }
luminance-derive = { path = "../forks/luminance-rs/luminance-derive" }
luminance-gl = { path = "../forks/luminance-rs/luminance-gl" }
luminance-sdl2 = { path = "../forks/luminance-rs/luminance-sdl2" }

[profile.dev.package."*"]
opt-level = 3
