[package]
name = "archi"
version = "0.1.0"
authors = ["Joel Nordström <e.joel.nordstrom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "*"
image = "0.22"
luminance = "0.40"
luminance-derive = "0.6"
luminance-gl = "0.14"
nalgebra-glm = "*"
rand = "*"
hdrldr = "*"
glutin = { version = "0.24", default-features = false }

[profile.dev.package."*"]
opt-level = 3

[patch.crates-io]
luminance = { git = "https://github.com/phaazon/luminance-rs" }
luminance-derive = { git = "https://github.com/phaazon/luminance-rs" }
luminance-gl = { git = "https://github.com/phaazon/luminance-rs" }
