[package]
name = "archi"
version = "0.1.0"
authors = ["Joel Nordström <e.joel.nordstrom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "*"
glsl-include = "*"
glutin = { version = "0.24", default-features = false }
hdrldr = "*"
image = "0.22"
luminance = "0.40"
luminance-derive = "0.6"
luminance-gl = "0.14"
nalgebra-glm = "*"
rand = "*"
