[package]
name = "archi"
version = "0.1.0"
authors = ["Joel Nordström <e.joel.nordstrom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
gl = "*"
glutin = { version = "0.26", default-features = false, features = ["x11"] }
image = "0.22"
luminance = "0.43.2"
luminance-front = "0.3.1"
luminance-derive = "0.6.3"
luminance-gl = "0.16.1"
nalgebra-glm = "*"
rand = "*"
radiant = { path = "../../radiant" }
bytemuck = "*"
